--- a/app/src/main/res/layout/activity_detail_trip_driver.xml
+++ b/app/src/main/res/layout/activity_detail_trip_driver.xml
@@ -137,6 +137,7 @@
                         </LinearLayout>
 
                         <TextView
+                            android:id="@+id/tvShowMap"
                             android:gravity="center"
                             android:layout_marginTop="@dimen/margin_normal_large"
                             android:textSize="@dimen/font_medium"
