--- a/app/src/main/res/layout/item_register_trip.xml
+++ b/app/src/main/res/layout/item_register_trip.xml
@@ -183,7 +183,7 @@
 
             <TextView
                 style="@style/ToolItemTripTextView"
-                android:text="Đăng ký"
+                android:text="Hủy"
                 android:drawableStart="@drawable/ic_register" />
 
             <TextView
