--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,78 +7,156 @@
     android:background="@color/colorBackground">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:paddingBottom="@dimen/padding_large_huge"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorGreen">
+                android:background="@color/colorGreen"
+                android:paddingBottom="@dimen/padding_large_huge">
 
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/height_large_huge"
-                    android:layout_marginBottom="@dimen/margin_huge_giant"
-                    android:layout_marginEnd="@dimen/margin_large"
-                    android:layout_marginStart="@dimen/margin_large"
-                    android:layout_marginTop="@dimen/margin_large"
-                    android:background="@drawable/background_border_search"
-                    android:drawablePadding="@dimen/padding_normal"
-                    android:textColor="@color/colorGrayLight"
-                    android:drawableStart="@drawable/ic_menu_search"
-                    android:inputType="text"
-                    android:maxLines="1"
-                    android:paddingEnd="@dimen/padding_normal_large"
-                    android:paddingStart="@dimen/padding_normal_large"
-                    tools:ignore="LabelFor" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_marginTop="@dimen/margin_giant_large"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <android.support.v7.widget.CardView
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/margin_large"
-                    android:layout_marginEnd="@dimen/margin_large"
-                    android:layout_marginStart="@dimen/margin_large"
-                    android:layout_marginTop="@dimen/margin_normal"
-                    app:cardCornerRadius="@dimen/radius_small">
+                    android:layout_margin="@dimen/margin_large"
+                    android:background="@drawable/background_border"
+                    android:padding="@dimen/padding_normal">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/padding_normal_large">
+                        android:layout_marginEnd="@dimen/margin_normal_large"
+                        android:layout_toStartOf="@+id/ivSearch"
+                        android:orientation="vertical">
 
-                        <TextView
-                            android:layout_width="0dp"
+                        <LinearLayout
+                            android:id="@+id/llStartPosition"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:drawableTop="@drawable/ic_menu_home"
-                            android:gravity="center_horizontal"
-                            android:text="@string/my_driver" />
+                            android:gravity="center_vertical">
 
-                        <TextView
-                            android:layout_width="0dp"
+                            <ImageView
+                                android:id="@+id/ivMarkerStart"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:srcCompat="@drawable/ic_marker_start" />
+
+                            <TextView
+                                android:id="@+id/tvStartPosition"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/margin_normal"
+                                android:maxLines="1"
+                                android:text="Hai Bà Trưng - Hà Nội"
+                                android:textColor="@color/colorBlackLight2"
+                                android:textSize="@dimen/font_normal" />
+
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/separate_height"
+                            android:layout_marginStart="@dimen/margin_large_huge"
+                            android:layout_marginTop="@dimen/margin_normal"
+                            android:background="@color/colorBlackLight3" />
+
+                        <LinearLayout
+                            android:id="@+id/llEndPosition"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:drawableTop="@drawable/ic_menu_home"
-                            android:gravity="center_horizontal"
-                            android:text="@string/my_hitchhiker" />
+                            android:layout_marginTop="@dimen/margin_normal"
+                            android:gravity="top">
+
+                            <ImageView
+                                android:id="@+id/ivMarkerEnd"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:srcCompat="@drawable/ic_marker_end" />
+
+                            <TextView
+                                android:id="@+id/tvEndPosition"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/margin_normal"
+                                android:maxLines="1"
+                                android:text="TT Nếnh - Bắc Giang"
+                                android:textColor="@color/colorBlackLight2"
+                                android:textSize="@dimen/font_normal" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                    <ImageView
+                        android:id="@+id/ivSearch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        app:srcCompat="@drawable/ic_search" />
+
+                </RelativeLayout>
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_giant_large">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_large"
+                    android:layout_marginTop="@dimen/margin_huge"
+                    android:layout_marginEnd="@dimen/margin_large"
+                    android:layout_marginBottom="@dimen/margin_large"
+                    android:background="@drawable/background_border">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:drawableTop="@drawable/ic_my_trip"
+                            android:drawablePadding="@dimen/padding_small"
+                            android:gravity="center_horizontal"
+                            android:padding="@dimen/padding_normal"
+                            android:text="@string/my_trip"
+                            android:textColor="@color/colorBlackLight2"
+                            android:textSize="@dimen/font_medium" />
+
+                        <View
+                            android:layout_width="@dimen/separate_height"
+                            android:layout_height="match_parent"
+                            android:background="@color/colorBlackLight3" />
+
+                        <TextView
+                            android:id="@+id/tvRegisterTrip"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:drawableTop="@drawable/ic_register_trip"
+                            android:drawablePadding="@dimen/padding_small"
+                            android:gravity="center_horizontal"
+                            android:padding="@dimen/padding_normal"
+                            android:text="@string/register_trip"
+                            android:textColor="@color/colorBlackLight2"
+                            android:textSize="@dimen/font_medium" />
+
+                    </LinearLayout>
+
+                </RelativeLayout>
 
             </LinearLayout>
 
@@ -90,41 +168,41 @@
             android:orientation="vertical">
 
             <TextView
-                android:layout_marginTop="@dimen/margin_normal"
-                android:layout_marginStart="@dimen/margin_normal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_normal"
+                android:layout_marginTop="@dimen/margin_normal"
                 android:text="@string/title_driver"
                 android:textColor="@color/colorBlackLight"
                 android:textSize="@dimen/font_normal" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvDriver"
-                android:layout_marginTop="@dimen/margin_normal"
-                tools:listitem="@layout/item_trip"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_normal"
                 android:nestedScrollingEnabled="false"
                 android:scrollbars="none"
+                tools:listitem="@layout/item_trip"
                 tools:targetApi="lollipop" />
 
             <TextView
-                android:layout_marginTop="@dimen/margin_large_huge"
-                android:layout_marginStart="@dimen/margin_normal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_normal"
+                android:layout_marginTop="@dimen/margin_large_huge"
                 android:text="@string/title_hitchhiker"
                 android:textColor="@color/colorBlackLight"
                 android:textSize="@dimen/font_normal" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvHitchhiker"
-                android:layout_marginTop="@dimen/margin_normal"
-                tools:listitem="@layout/item_trip"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_normal"
                 android:nestedScrollingEnabled="false"
                 android:scrollbars="none"
+                tools:listitem="@layout/item_trip"
                 tools:targetApi="lollipop" />
 
         </LinearLayout>
