--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -92,6 +92,7 @@
     </RelativeLayout>
 
     <ImageView
+        android:id="@+id/ivNavigation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
