--- a/app/src/main/res/drawable/background_border_part_white.xml
+++ b/app/src/main/res/drawable/background_border_part_white.xml
@@ -3,6 +3,8 @@
     android:shape="rectangle">
     <solid android:color="@color/colorWhite" />
 
-    <corners android:radius="@dimen/radius_small" />
+    <corners
+        android:topRightRadius="@dimen/radius_small"
+        android:topLeftRadius="@dimen/radius_small" />
 
 </shape>
