--- a/app/src/main/res/drawable/background_border_white_transparent.xml
+++ b/app/src/main/res/drawable/background_border_white_transparent.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorWhite" />
-
+    <solid android:color="@color/colorWhiteLight3" />
+    <stroke
+        android:width="@dimen/border_width"
+        android:color="@color/colorWhiteLight3" />
     <corners android:radius="@dimen/radius_small" />
+
 
 </shape>
