--- a/app/src/main/res/layout/activity_register_trip.xml
+++ b/app/src/main/res/layout/activity_register_trip.xml
@@ -1,67 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:fillViewport="true"
     tools:context=".ui.registertrip.RegisterTripActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorGreen"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingStart="@dimen/padding_large"
-            android:paddingTop="@dimen/padding_large"
-            android:paddingEnd="@dimen/padding_large">
+            android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/ivBack"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_back" />
+                android:background="@color/colorGreen"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/padding_large"
+                android:paddingTop="@dimen/padding_large"
+                android:paddingEnd="@dimen/padding_large"
+                android:paddingBottom="@dimen/padding_huge_giant">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_large"
-                android:text="@string/register_trip"
-                android:textColor="@color/colorBackground2"
-                android:textSize="@dimen/font_large_huge"
-                android:textStyle="bold" />
+                <ImageView
+                    android:id="@+id/ivBack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_back" />
 
-        </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_large"
+                    android:text="@string/register_trip"
+                    android:textColor="@color/colorBackground2"
+                    android:textSize="@dimen/font_large_huge"
+                    android:textStyle="bold" />
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tlRegisterTrip"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_large"
-            app:tabTextColor="@color/colorBackground2"
-            app:tabMode="fixed">
+            </LinearLayout>
 
-            <android.support.design.widget.TabItem
-                android:icon="@drawable/ic_driver"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/margin_normal"
+                android:layout_marginBottom="@dimen/margin_normal"
+                android:orientation="vertical"
+                android:paddingTop="@dimen/padding_normal">
 
-            <android.support.design.widget.TabItem
-                android:icon="@drawable/ic_hitchhiker"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </android.support.design.widget.TabLayout>
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/tlRegisterTrip"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_giant_large"
+                    android:layout_marginStart="@dimen/margin_normal"
+                    android:layout_marginEnd="@dimen/margin_normal"
+                    android:background="@drawable/background_border_white"
+                    app:tabIndicatorHeight="@dimen/separate_height"
+                    app:tabIndicatorFullWidth="false"
+                    app:tabMode="fixed"
+                    app:tabTextColor="@color/colorBackground2" />
+
+                <android.support.v4.view.ViewPager
+                    android:layout_marginTop="@dimen/margin_normal"
+                    android:id="@+id/vpRegisterTrip"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+            </LinearLayout>
+
+        </FrameLayout>
 
     </LinearLayout>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vpRegisterTrip"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-</LinearLayout>
+</android.support.v4.widget.NestedScrollView>
