--- a/app/src/main/res/layout/fragment_my_hitchhiker.xml
+++ b/app/src/main/res/layout/fragment_my_hitchhiker.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvRegisterHitchhiker"
+        android:id="@+id/rvMyHitchhiker"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
