--- a/app/src/main/res/layout/view_marker_start.xml
+++ b/app/src/main/res/layout/view_marker_start.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/ivMarker"
+        android:id="@+id/ivMarkerStart"
         app:srcCompat="@drawable/ic_marker_start"
         android:layout_width="@dimen/width_large"
         android:layout_height="@dimen/height_large" />
